@@ -48,7 +48,7 @@ void VXLAN_Analyzer::DeliverPacket(int len, const u_char* data, bool orig,
 
 	const EncapsulationStack* estack = Conn()->GetEncapsulation();
 
-	if ( estack && estack->Depth() >= BifConst::Tunnel::max_depth )
+	if ( estack && estack->Depth() >= zeek::BifConst::Tunnel::max_depth )
 		{
 		reporter->Weird(Conn(), "tunnel_depth");
 		return;
