@@ -67,23 +67,23 @@ bool Ascii::DoInit(const ReaderInfo& info, int num_fields, const Field* const* f
 	{
 	StopWarningSuppression();
 
-	separator.assign( (const char*) BifConst::InputAscii::separator->Bytes(),
-	                 BifConst::InputAscii::separator->Len());
+	separator.assign( (const char*) zeek::BifConst::InputAscii::separator->Bytes(),
+	                 zeek::BifConst::InputAscii::separator->Len());
 
-	set_separator.assign( (const char*) BifConst::InputAscii::set_separator->Bytes(),
-	                     BifConst::InputAscii::set_separator->Len());
+	set_separator.assign( (const char*) zeek::BifConst::InputAscii::set_separator->Bytes(),
+	                     zeek::BifConst::InputAscii::set_separator->Len());
 
-	empty_field.assign( (const char*) BifConst::InputAscii::empty_field->Bytes(),
-	                   BifConst::InputAscii::empty_field->Len());
+	empty_field.assign( (const char*) zeek::BifConst::InputAscii::empty_field->Bytes(),
+	                   zeek::BifConst::InputAscii::empty_field->Len());
 
-	unset_field.assign( (const char*) BifConst::InputAscii::unset_field->Bytes(),
-	                   BifConst::InputAscii::unset_field->Len());
+	unset_field.assign( (const char*) zeek::BifConst::InputAscii::unset_field->Bytes(),
+	                   zeek::BifConst::InputAscii::unset_field->Len());
 
-	fail_on_invalid_lines = BifConst::InputAscii::fail_on_invalid_lines;
-	fail_on_file_problem = BifConst::InputAscii::fail_on_file_problem;
+	fail_on_invalid_lines = zeek::BifConst::InputAscii::fail_on_invalid_lines;
+	fail_on_file_problem = zeek::BifConst::InputAscii::fail_on_file_problem;
 
-	path_prefix.assign((const char*) BifConst::InputAscii::path_prefix->Bytes(),
-	                   BifConst::InputAscii::path_prefix->Len());
+	path_prefix.assign((const char*) zeek::BifConst::InputAscii::path_prefix->Bytes(),
+	                   zeek::BifConst::InputAscii::path_prefix->Len());
 
 	// Set per-filter configuration options.
 	for ( ReaderInfo::config_map::const_iterator i = info.config.begin(); i != info.config.end(); i++ )
